src/objects/Product_Price_Kit__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_Kit__c</fullName>
        <label>Price Kit</label>
        <referenceTo>Price_Kit__c</referenceTo>
        <relationshipLabel>Product Price Kit</relationshipLabel>
        <relationshipName>Product_Price_Kit</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Processing_cost_USD_lb__c</fullName>
        <label>Processing cost (USD/lb)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Processing_loss__c</fullName>
        <label>Processing loss %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PLBS_Product_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Family</valueSetName>
        </valueSet>
    </fields>
    <label>Product Price Kit</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Product Price Kit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Price Kit</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>